Completed Front Mentor Challenge

--- a/index.html
+++ b/index.html
@@ -8,15 +8,29 @@
   <title>Frontend Mentor | NFT preview card component</title>
 </head>
 <body>
+  <div class="card">
+    <div class="card__images">
+      <div class="card__images-eye"></div>
+    </div>
+    <h1 class="card__title">Equilibrium #3429</h1>
+    <p class="card__description">Our Equilibrium collection promotes balance and calm.</p>
 
-  Equilibrium #3429
+    <div class="card__details">
+      <div class="card__details_value">
+        <img src="images/icon-ethereum.svg" alt="Ethereum">
+        <span>0.041 ETH</span>
+      </div>
+      <div class="card__details__time">
+        <img src="images/icon-clock.svg" alt="clock">
+        <span>3 days left</span>
+      </div>
+    </div>
 
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
+    <div class="card__creator">
+      <div class="card__creator__photo"></div>
+      <p class="card__creator__create"><span>Creation of</span> Jules Wyvern</p>
+    </div>
+  </div>
 
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
